--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -16,7 +16,7 @@
             </p>
         {% endif %}
 
-        <form method="post">
+        <form method="post" action="{% url 'usuarios:login' %}">
             {% csrf_token %}
 
             <div class="mb-4">
