--- a/clientes/templates/list.html
+++ b/clientes/templates/list.html
@@ -13,6 +13,7 @@
             <th class="border border-gray-300 px-2">Email</th>
             <th class="border border-gray-300 px-2">Teléfono</th>
             <th class="border border-gray-300 px-2">Estado</th>
+            <th class="border border-gray-300 px-2">Nivel de Riesgo</th>
             {% if request.user.rol == 'admin' %}
                 <th class="border border-gray-300 px-2">Acciones</th>
             {% endif %}
@@ -25,6 +26,15 @@
             <td class="border border-gray-300 px-2">{{ cliente.email }}</td>
             <td class="border border-gray-300 px-2">{{ cliente.telefono }}</td>
             <td class="border border-gray-300 px-2">{{ cliente.estado }}</td>
+            <td class="border border-gray-300 px-2">
+                {% if cliente.nivel_riesgo == "Bajo" %}
+                    <span class="text-green-600 font-semibold">{{ cliente.nivel_riesgo }}</span>
+                {% elif cliente.nivel_riesgo == "Medio" %}
+                    <span class="text-yellow-600 font-semibold">{{ cliente.nivel_riesgo }}</span>
+                {% else %}
+                    <span class="text-red-600 font-semibold">{{ cliente.nivel_riesgo }}</span>
+                {% endif %}
+            </td>
             {% if request.user.rol == 'admin' %}
             <td class="border border-gray-300 px-2">
                 <a href="{% url 'clientes:update' cliente.pk %}" class="text-blue-600">Editar</a> |
