--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <h1>Bienvenido al Sistema</h1>
         <ul>
-            <li><a href="/usuarios/">Usuarios</a></li>
+            <li><a href="/usuarios_list/">Usuarios</a></li>
             <li><a href="/clientes/">Clientes</a></li>
             <li><a href="/predicciones/">Predicciones</a></li>
             <li><a href="/chatbot/">Chatbot</a></li>
