--- a/templates/index.html
+++ b/templates/index.html
@@ -14,37 +14,14 @@
     <div class="container mx-auto p-8 bg-white rounded shadow max-w-md mt-10">
         <h1 class="text-center text-2xl font-bold mb-6">Bienvenido al Sistema</h1>
         <ul class="space-y-4 text-center">
-            <li>
-                <a href="{% url 'usuarios:login' %}" class="text-blue-600 hover:underline">
-                    Usuarios
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'clientes:list' %}" class="text-blue-600 hover:underline">
-                    Clientes
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'predicciones:entrenar_modelo' %}" class="text-blue-600 hover:underline">
-                    Predicciones
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'chatbot:inicio' %}" class="text-blue-600 hover:underline">
-                    Chatbot
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'dashboard:home' %}" class="text-blue-600 hover:underline">
-                    Dashboard
-                </a>
-            </li>
-            <li>
-                <a href="/admin/" class="text-blue-600 hover:underline">
-                    Admin (Django)
-                </a>
-            </li>
-        </ul>
+        <li><a href="{% url 'usuarios:login' %}" class="text-blue-600 hover:underline">Usuarios</a></li>
+        <li><a href="{% url 'clientes:listar' %}" class="text-blue-600 hover:underline">Clientes</a></li>
+        <li><a href="{% url 'predicciones:entrenar_modelo' %}" class="text-blue-600 hover:underline">Predicciones</a></li>
+        <li><a href="{% url 'chatbot:inicio' %}" class="text-blue-600 hover:underline">Chatbot</a></li>
+        <li><a href="{% url 'dashboard:home' %}" class="text-blue-600 hover:underline">Dashboard</a></li>
+        <li><a href="/admin/" class="text-blue-600 hover:underline">Admin (Django)</a></li>
+    </ul>
+
     </div>
 
 </body>
